--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,24 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+
+# Python
+*.pyc
+
+# Git
+*.orig
+*.rej
+
+# Vim
+.*.swp
+.*.swo
+.*.swp
+
+# Emacs
+*~
+
+# distutil
+MANIFEST
+dist/*
+build/*
+*.egg-info
